--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -10,7 +10,8 @@
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-minify-css": "^1.0.0",
-    "gulp-uglify": "^1.1.0"
+    "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.2.4"
   },
   "scripts": {
     "build": "gulp"
