--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -1,29 +1,34 @@
 {
   "name": "sift",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.html",
-  "dependencies": {
-    "gulp": "^3.8.11"
-  },
-  "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-watch": "^4.2.4"
-  },
+  "main": "index.js",
   "scripts": {
-    "build": "gulp"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/UW-Macrostrat/sift.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "John J Czaplewski <jczaplew@gmail.com>",
-  "license": "CC0",
-  "bugs": {
-    "url": "https://github.com/UW-Macrostrat/sift/issues"
+  "license": "CC0-1.0",
+  "dependencies": {
+    "chart.js": "^1.0.2",
+    "fastclick": "^1.0.6",
+    "gulp": "^3.9.0",
+    "leaflet": "^1.0.0-beta.1",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
+    "topojson": "^1.6.19",
+    "underscore": "^1.8.3",
+    "xhr": "^2.0.3"
   },
-  "homepage": "https://github.com/UW-Macrostrat/sift"
+  "devDependencies": {
+    "babelify": "^6.1.3",
+    "browserify": "^11.0.1",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-htmlhint": "^0.3.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-uglify": "^1.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
