--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "chart.js": "^1.0.2",
     "fastclick": "^1.0.6",
-    "gulp": "^3.9.0",
-    "leaflet": "^1.0.0-beta.1",
+    "leaflet": "^1.0.0-beta.2",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "topojson": "^1.6.19",
+    "turf-centroid": "^1.1.2",
     "turf-convex": "^1.0.1",
     "turf-explode": "^1.0.1",
     "underscore": "^1.8.3",
