--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -30,8 +30,10 @@
     "gulp-htmlhint": "^0.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-minify-css": "^1.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.5.0"
   }
 }
