--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -9,6 +9,7 @@
   "author": "John J Czaplewski <jczaplew@gmail.com>",
   "license": "CC0-1.0",
   "dependencies": {
+    "async": "^1.5.2",
     "chart.js": "^1.0.2",
     "fastclick": "^1.0.6",
     "leaflet": "^1.0.0-beta.2",
