--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^1.0.2",
     "fastclick": "^1.0.6",
     "leaflet": "^1.0.0-beta.2",
+    "leaflet-hash": "^0.2.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "topojson": "^1.6.19",
