--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-animate-height": "^0.10.9",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
