--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.43.0",
