--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp-minify-css": "^1.2.4",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.43.0",
     "material-ui": "^1.0.0-beta.27",
