--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
+    "browser-sync": "^2.26.0",
     "browserify": "^15.1.0",
+    "connect-history-api-fallback": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
     "gulp-clean-css": "^3.9.2",
@@ -38,6 +40,7 @@
     "react-animate-height": "^0.10.9",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   }
