--- a/package.json
+++ b/package.json
@@ -4,35 +4,32 @@
   "description": "Macrostrat map interface",
   "main": "index.html",
   "scripts": {
-    "postinstall": "gulp deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "webpack"
   },
   "author": "John J Czaplewski <jczaplewski@wisc.edu>",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.26.0",
-    "browserify": "^15.1.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.3.2",
     "connect-history-api-fallback": "^1.5.0",
-    "gulp": "^3.9.1",
-    "gulp-buffer": "0.0.2",
-    "gulp-clean-css": "^3.9.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-htmlhint": "^1.0.0",
-    "gulp-uglify": "^3.0.0",
-    "vinyl-source-stream": "^2.0.0"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.17.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "d3": "^4.13.0",
-    "gulp-minify-css": "^1.2.4",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.50.0",
     "prop-types": "^15.6.0",
