--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.3.0",
     "react-animate-height": "^0.10.9",
     "react-dom": "^16.3.0",
+    "react-hyperscript": "^3.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
