--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
     "connect-history-api-fallback": "^1.5.0",
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "webpack": "^4.22.0",
@@ -30,6 +32,7 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.17.1",
     "d3": "^4.13.0",
+    "d3-jetpack": "^2.0.19",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.50.0",
     "prop-types": "^15.6.0",
