--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.7.0",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.17.1",
