--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "topojson": "^3.0.2"
   }
 }
