--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.17.1",
     "d3": "^4.13.0",
     "d3-jetpack": "^2.0.19",
+    "d3-jetpack-module": "0.0.19",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.50.0",
     "prop-types": "^15.6.0",
