--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.17.1",
+    "classnames": "^2.2.6",
     "d3": "^4.13.0",
     "d3-jetpack": "^2.0.19",
     "d3-jetpack-module": "0.0.19",
