--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Macrostrat map interface",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "webpack"
+    "bundle": "webpack",
+    "postinstall": "linklocal --link -r && linklocal --list -r | bulk -c 'npm install --production'"
   },
   "author": "John J Czaplewski <jczaplewski@wisc.edu>",
   "license": "MIT",
@@ -17,10 +17,12 @@
     "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.26.0",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "bulk": "^2.0.1",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^1.0.0",
+    "linklocal": "^2.8.2",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -28,6 +30,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "stratiform": "file:./bundledDeps/stratiform",
     "@blueprintjs/core": "^3.7.0",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
