--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "stratiform": "file:./bundledDeps/stratiform",
     "@blueprintjs/core": "^3.7.0",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
@@ -39,6 +38,7 @@
     "d3": "^4.13.0",
     "d3-jetpack": "^2.0.19",
     "d3-jetpack-module": "0.0.19",
+    "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.50.0",
     "prop-types": "^15.6.0",
@@ -50,6 +50,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "stratiform": "file:./bundledDeps/stratiform",
     "topojson": "^3.0.2"
   }
 }
