--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.3.0",
     "react-animate-height": "^0.10.9",
+    "react-cookie": "^3.0.4",
     "react-dom": "^16.3.0",
     "react-hyperscript": "^3.2.0",
     "react-redux": "^5.0.6",
