--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "d3": "^4.13.0",
     "d3-jetpack": "^2.0.19",
     "d3-jetpack-module": "0.0.19",
+    "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.50.0",
