--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Macrostrat map interface",
   "main": "index.html",
   "scripts": {
-    "postinstall": "gulp deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build-dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "author": "John J Czaplewski <jczaplewski@wisc.edu>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.0",
+    "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
@@ -21,7 +27,11 @@
     "gulp-concat": "^2.6.1",
     "gulp-htmlhint": "^1.0.0",
     "gulp-uglify": "^3.0.0",
-    "vinyl-source-stream": "^2.0.0"
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "@material-ui/core": "^3.1.0",
