--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "bundle": "webpack",
+    "dev": "webpack",
     "postinstall": "linklocal --link -r && linklocal --list -r | bulk -c 'npm install --production'"
   },
   "author": "John J Czaplewski <jczaplewski@wisc.edu>",
