--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "browser-sync": "^2.26.0",
     "browser-sync-webpack-plugin": "^2.2.2",
     "bulk": "^2.0.1",
+    "cesium": "^1.68.0",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
     "connect-history-api-fallback": "^1.5.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^1.0.0",
     "linklocal": "^2.8.2",
     "style-loader": "^0.23.1",
