--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^1.0.0",
+    "file-loader": "^6.0.0",
     "linklocal": "^2.8.2",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
