--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-frontend",
-  "version": "4.0.0",
+  "version": "4.0.0a1",
   "description": "Macrostrat map interface",
   "main": "index.html",
   "scripts": {
@@ -11,9 +11,13 @@
   "author": "Daven Quinn <daven.quinn@wisc.edu>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.26.0",
