--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.7.0",
+    "@macrostrat/hyper": "^1.2.6",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.17.1",
