--- a/package.json
+++ b/package.json
@@ -46,15 +46,16 @@
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.50.0",
     "prop-types": "^15.6.0",
-    "react": "^16.3.0",
+    "react": "^16.13.1",
     "react-animate-height": "^0.10.9",
     "react-cookie": "^3.0.4",
-    "react-dom": "^16.3.0",
+    "react-dom": "^16.13.1",
     "react-hyperscript": "^3.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "stratiform": "file:./bundledDeps/stratiform",
     "topojson": "^3.0.2"
   }
