--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@macrostrat/hyper": "^1.2.6",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
+    "@types/react-redux": "^7.1.7",
     "axios": "^0.17.1",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
