--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@macrostrat/hyper": "^1.2.6",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
+    "@types/cesium": "^1.67.4",
     "@types/react-redux": "^7.1.7",
     "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.17.1",
@@ -65,6 +66,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "resium": "^1.11.0",
     "stratiform": "file:./bundledDeps/stratiform",
     "topojson": "^3.0.2"
   }
