--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/node": "^13.13.5",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.26.7",
@@ -30,6 +31,7 @@
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^1.7.0",
     "file-loader": "^6.0.0",
     "linklocal": "^2.8.2",
     "style-loader": "^0.23.1",
