Added mapbox terrain

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundledDeps/ui-components"]
 	path = bundledDeps/ui-components
 	url = git://github.com/UW-Macrostrat/ui-components.git
+[submodule "bundledDeps/cesium-martini"]
+	path = bundledDeps/cesium-martini
+	url = git://github.com/davenquinn/cesium-martini.git
