--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@blueprintjs/core": "^3.7.0",
     "@macrostrat/hyper": "^1.2.6",
     "@macrostrat/ui-components": "file:./bundledDeps/ui-components",
+    "@macrostrat/cesium-martini": "file:./bundledDeps/cesium-martini",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "@types/cesium": "^1.67.4",
