--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "bundle:ui": "cd bundledDeps/ui-components && npm run build",
     "bundle:main": "webpack",
-    "bundle": "npm run-script bundle:ui && npm run-script bundle:main",
+    "bundle:terrain": "cd bundledDeps/cesium-martini && npm run build",
+    "bundle": "npm run-script bundle:ui && npm run-script bundle:terrain && npm run-script bundle:main",
     "dev:ui": "cd bundledDeps/ui-components && npm run dev",
     "dev:main": "webpack --watch",
+    "dev:terrain": "cd bundledDeps/cesium-martini && npm run watch",
     "dev": "npm-run-all -p --aggregate-output dev:*",
     "preinstall": "linklocal && linklocal --list | bulk -c 'npm install --suppress-warnings'"
   },
