--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.7.0",
+    "@macrostrat/cesium-martini": "file:./bundledDeps/cesium-martini",
     "@macrostrat/hyper": "^1.2.6",
     "@macrostrat/ui-components": "file:./bundledDeps/ui-components",
-    "@macrostrat/cesium-martini": "file:./bundledDeps/cesium-martini",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "@types/cesium": "^1.67.4",
@@ -60,6 +60,7 @@
     "axios": "^0.17.1",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
+    "d3-format": "^1.4.4",
     "d3-jetpack": "^2.0.19",
     "d3-jetpack-module": "0.0.19",
     "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
