--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@macrostrat/cesium-martini": "file:./bundledDeps/cesium-martini",
     "@macrostrat/hyper": "^1.2.6",
     "@macrostrat/ui-components": "file:./bundledDeps/ui-components",
+    "@mapbox/point-geometry": "^0.1.0",
+    "@mapbox/vector-tile": "^1.3.1",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "@types/cesium": "^1.67.4",
@@ -68,6 +70,7 @@
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.50.0",
+    "pbf": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.13.1",
     "react-animate-height": "^0.10.9",
@@ -82,6 +85,8 @@
     "regl": "^1.5.0",
     "resium": "^1.11.0",
     "stratiform": "file:./bundledDeps/stratiform",
-    "topojson": "^3.0.2"
+    "terriajs": "^7.11.4",
+    "topojson": "^3.0.2",
+    "urijs": "^1.19.2"
   }
 }
