--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bundle:main": "webpack",
     "bundle:terrain": "cd bundledDeps/cesium-martini && npm run build",
     "bundle": "npm run-script bundle:ui && npm run-script bundle:terrain && npm run-script bundle:main",
+    "deploy:steno": "npm run bundle && scp -r dist steno:/data/projects/experiments/web-next",
     "dev:ui": "cd bundledDeps/ui-components && npm run dev",
     "dev:main": "webpack --watch",
     "dev:terrain": "cd bundledDeps/cesium-martini && npm run watch",
