--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
-    "dotenv-webpack": "^1.7.0",
+    "dotenv-webpack": "^6.0.0",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.5.0",
     "linklocal": "^2.8.2",
     "npm-run-all": "^4.1.5",
+    "path-browserify": "^0.0.1",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^5.10.1",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.7.0",
@@ -88,7 +90,6 @@
     "resium": "^1.11.0",
     "stratiform": "file:./bundledDeps/stratiform",
     "terriajs": "^7.11.4",
-    "topojson": "^3.0.2",
     "urijs": "^1.19.2"
   }
 }
