--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "resium": "^1.11.0",
     "stratiform": "file:./bundledDeps/stratiform",
     "terriajs": "^7.11.4",
-    "topojson": "^3.0.2",
+    "topojson-client": "^3.0.0",
     "urijs": "^1.19.2"
   }
 }
