--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npm install npm-force-resolutions && npm-force-resolutions",
+    "dev": "gulp watch"
   },
   "author": "John J Czaplewski <jczaplew@gmail.com>",
   "license": "CC0-1.0",
@@ -34,8 +36,12 @@
     "gulp-minify-css": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
+    "npm-force-resolutions": "0.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.5.0"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.4"
   }
 }
