Add new layers to map components

--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "npm install npm-force-resolutions && npm-force-resolutions",
-    "dev": "gulp watch"
+    "dev": "gulp watch",
+    "build": "gulp build"
   },
   "author": "John J Czaplewski <jczaplew@gmail.com>",
   "license": "CC0-1.0",
