--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "bundle:main": "webpack",
     "bundle:terrain": "cd bundledDeps/cesium-martini && npm run build",
     "bundle": "npm run-script bundle:ui && npm run-script bundle:terrain && npm run-script bundle:main",
+    "bundle:dist": "npm run clean && PUBLIC_URL=/next/web/ npm run bundle:main",
     "clean": "rm -rf dist/*",
-    "deploy:steno": "npm run clean && npm run bundle && scp -r dist steno:/data/projects/experiments/web-next",
+    "deploy:steno": "npm run bundle:dist && rsync -azv --delete dist/ steno:/data/projects/macrostrat/next/web/",
     "dev:ui": "cd bundledDeps/ui-components && npm run dev",
     "dev:main": "webpack --watch",
     "dev:terrain": "cd bundledDeps/cesium-martini && npm run watch",
