--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^3.5.3",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^6.0.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "linklocal": "^2.8.2",
     "npm-run-all": "^4.1.5",
     "style-loader": "^0.23.1",
