--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "file-loader": "^6.0.0",
     "linklocal": "^2.8.2",
     "npm-run-all": "^4.1.5",
+    "rollup": "^2.39.0",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
