--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "outDir": "dist/lib",
     "typeRoots": ["node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src", "packages/cesium-viewer/src"]
 }
