--- a/packages/column-footprint-editor/package.json
+++ b/packages/column-footprint-editor/package.json
@@ -15,6 +15,7 @@
     "@vx/voronoi": "^0.0.199",
     "d3-delaunay": "^5.3.0",
     "mapbox-gl": "^2.2.0",
+    "mapbox-gl-draw-snap-mode": "^0.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "topojson-client": "^3.1.0"
