--- a/package.json
+++ b/package.json
@@ -5,18 +5,12 @@
   "description": "Macrostrat map interface",
   "main": "index.html",
   "scripts": {
-    "bundle:ui": "cd bundledDeps/ui-components && npm run build",
-    "bundle:main": "webpack",
-    "bundle:terrain": "npm --prefix packages/cesium-martini run build",
-    "bundle": "npm run-script bundle:ui && npm run-script bundle:terrain && npm run-script bundle:main",
+    "bundle": "webpack",
     "bundle:dist": "npm run clean && PUBLIC_URL=/next/web/ npm run bundle:main",
     "clean": "rm -rf dist/*",
     "deploy:steno": "npm run bundle:dist && rsync -azv --delete dist/ steno:/data/projects/macrostrat/next/web/",
-    "dev:ui": "npm --prefix bundledDeps/ui-components run dev",
-    "dev:main": "webpack --watch",
-    "dev:terrain": "npm --prefix packages/cesium-martini run watch",
-    "dev": "npm-run-all -p --aggregate-output dev:*",
-    "preinstall": "linklocal && linklocal --list | bulk -c 'npm install --suppress-warnings'"
+    "dev": "webpack --watch",
+    "postinstall": "lerna bootstrap --hoist"
   },
   "workspaces": [
     "packages/*"
@@ -40,12 +34,12 @@
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
     "bulk": "^2.0.1",
-    "cesium": "^1.68.0",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^6.0.0",
+    "lerna": "^3.22.1",
     "linklocal": "^2.8.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.39.0",
@@ -58,10 +52,10 @@
   "dependencies": {
     "@blueprintjs/core": "^3.7.0",
     "@loadable/component": "^5.14.1",
-    "@macrostrat/cesium-martini": "file:./packages/cesium-martini",
-    "@macrostrat/cesium-viewer": "^1.0.0",
+    "@macrostrat/cesium-martini": "*",
+    "@macrostrat/cesium-viewer": "*",
     "@macrostrat/hyper": "^1.2.6",
-    "@macrostrat/ui-components": "file:./bundledDeps/ui-components",
+    "@macrostrat/ui-components": "*",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@material-ui/core": "^3.1.0",
@@ -70,6 +64,7 @@
     "@types/react-redux": "^7.1.7",
     "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.17.1",
+    "cesium": "^1.78.0",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
     "d3-format": "^1.4.4",
@@ -94,7 +89,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "regl": "^1.5.0",
-    "resium": "^1.11.0",
+    "resium": "^1.13.1",
     "stratiform": "file:./bundledDeps/stratiform",
     "terriajs": "^7.11.4",
     "topojson-client": "^3.0.0",
