--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "packages/cesium-viewer"]
 	path = packages/cesium-viewer
 	url = git://github.com/UW-Macrostrat/cesium-viewer.git
+[submodule "packages/column-components"]
+	path = packages/column-components
+	url = git://github.com/UW-Macrostrat/column-components.git
