--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@macrostrat/cesium-viewer": ["packages/cesium-viewer/src/"],
       "@macrostrat/cesium-martini": ["packages/cesium-martini"],
       "@macrostrat/ui-components": ["packages/ui-components/src/"],
-      "@macrostrat/column-components": ["packages/column-components/src/"]
+      "@macrostrat/column-components": ["packages/column-components/src/"],
+      "@macrostrat/map-components": ["packages/map-components/src/"]
     }
   },
   "include": ["src"]
