--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "regl": "^1.5.0",
