--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "map-components"]
 	path = packages/map-components
 	url = git://github.com/UW-Macrostrat/map-components.git
+[submodule "packages/MVTImageryProvider"]
+	path = packages/MVTImageryProvider
+	url = git://github.com/davenquinn/MVTImageryProvider.git
