--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.html",
   "scripts": {
     "bundle": "webpack",
-    "bundle:dist": "npm run clean && PUBLIC_URL=/next/web/ npm run bundle:main",
+    "bundle:dist": "npm run clean && PUBLIC_URL=/next/web/ npm run bundle",
     "clean": "rm -rf dist/*",
     "deploy:steno": "npm run bundle:dist && rsync -azv --delete dist/ steno:/data/projects/macrostrat/next/web/",
     "dev": "webpack --watch",
