--- a/packages/column-footprint-editor/package.json
+++ b/packages/column-footprint-editor/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.46.0",
+    "@blueprintjs/popover2": "^0.11.2",
     "@blueprintjs/select": "^3.17.0",
     "@macrostrat/ui-components": "^0.5.2",
     "@mapbox/mapbox-gl-draw": "^1.2.2",
