--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "packages/MVTImageryProvider"]
 	path = packages/MVTImageryProvider
 	url = git://github.com/davenquinn/MVTImageryProvider.git
+[submodule "packages/cesium-vector-provider"]
+	path = packages/cesium-vector-provider
+	url = git://github.com/davenquinn/cesium-vector-provider.git
