--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "packages/cesium-vector-provider"]
 	path = packages/cesium-vector-provider
 	url = git://github.com/davenquinn/cesium-vector-provider.git
+[submodule "packages/maplibre-gl-js"]
+	path = packages/maplibre-gl-js
+	url = git://github.com/maplibre/maplibre-gl-js.git
