--- a/package.json
+++ b/package.json
@@ -51,12 +51,15 @@
     "stylus-loader": "^3.0.2",
     "typescript": "^4.4.4",
     "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.7.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat/cesium-martini": "*",
+    "cesium-vector-provider": "file:./packages/cesium-vector-provider",
+    "maplibre-basic-renderer": "file:./packages/maplibre-basic-renderer",
     "@macrostrat/cesium-viewer": "*",
     "@macrostrat/column-components": "*",
     "@macrostrat/hyper": "^1.4.2",
@@ -83,6 +86,8 @@
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.0.0",
+    "maplibre-gl": "file:packages/maplibre-gl-js",
+    "maplibre-gl-js": "file:packages/maplibre-gl-js",
     "multi-regl": "^1.1.1",
     "mvt-imagery-provider": "file:packages/MVTImageryProvider",
     "pbf": "^3.2.1",
