--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dedent": "^0.7.0",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.5.2",
     "lerna": "^3.22.1",
     "linklocal": "^2.8.2",
     "npm-run-all": "^4.1.5",
