--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf dist/*",
     "deploy:steno": "npm run bundle:dist && rsync -azv --delete dist/ steno:/data/projects/macrostrat/next/web/",
     "dev": "webpack --watch",
-    "postinstall": "lerna bootstrap --hoist"
+    "bootstrap": "npm install --workspaces"
   },
   "workspaces": [
     "packages/*"
@@ -48,6 +48,7 @@
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "typescript": "^4.4.4",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
   },
@@ -55,8 +56,8 @@
     "@blueprintjs/core": "^3.7.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat/column-components": "*",
-    "@macrostrat/hyper": "^1.2.6",
-    "@macrostrat/ui-components": "*",
+    "@macrostrat/hyper": "^1.4.2",
+    "@macrostrat/ui-components": "^1",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@material-ui/core": "^3.1.0",
