--- a/packages/column-footprint-editor/package.json
+++ b/packages/column-footprint-editor/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-project",
   "scripts": {
-    "start": "parcel serve ./src/index.html",
-    "build": "parcel build ./src/index.html"
+    "start": "ENV=development parcel serve ./src/index.html",
+    "build": "ENV=production parcel build ./src/index.html"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.46.0",
