docker now runs frontend production and runs an npx static server

--- a/packages/column-footprint-editor/Dockerfile.old
+++ b/packages/column-footprint-editor/Dockerfile.old
@@ -10,7 +10,5 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
-WORKDIR /app/dist
-
-ENTRYPOINT ["npx", "serve"]
+EXPOSE 1234
+CMD ["npm", "start"]
