--- a/package.json
+++ b/package.json
@@ -69,8 +69,11 @@
     "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.17.1",
     "classnames": "^2.2.6",
+    "cesium": "1.80.0",
     "d3": "^4.13.0",
+    "d3-array": "^3.1.1",
     "d3-format": "^1.4.4",
+    "d3-geo": "^3.0.1",
     "d3-jetpack": "^2.0.19",
     "d3-jetpack-module": "0.0.19",
     "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
@@ -79,6 +82,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.0.0",
     "multi-regl": "^1.1.1",
+    "mvt-imagery-provider": "file:packages/MVTImageryProvider",
     "pbf": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.13.1",
