Tweaks to launch configs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Debug in Chrome",
+      "trace": true,
       "reAttach": true,
       "sourceMaps": true,
       "disableNetworkCache": true,
@@ -23,6 +24,7 @@
       "name": "Debug in Firefox",
       "type": "firefox",
       "request": "launch",
+      "trace": true,
       "reAttach": true,
       "sourceMaps": true,
       "disableNetworkCache": true,
