Updated webpack config

--- a/package.json
+++ b/package.json
@@ -58,8 +58,6 @@
     "@blueprintjs/core": "^3.7.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat/cesium-martini": "*",
-    "cesium-vector-provider": "file:./packages/cesium-vector-provider",
-    "maplibre-basic-renderer": "file:./packages/maplibre-basic-renderer",
     "@macrostrat/cesium-viewer": "*",
     "@macrostrat/column-components": "*",
     "@macrostrat/hyper": "^1.4.2",
@@ -69,11 +67,13 @@
     "@mapbox/vector-tile": "^1.3.1",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
+    "@open-wc/webpack-import-meta-loader": "^0.4.7",
     "@types/cesium": "^1.67.4",
     "@types/react-redux": "^7.1.7",
     "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.17.1",
     "cesium": "1.81.0",
+    "cesium-vector-provider": "file:./packages/cesium-vector-provider",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
     "d3-array": "^3.1.1",
@@ -86,6 +86,7 @@
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.0.0",
+    "maplibre-basic-renderer": "file:./packages/maplibre-basic-renderer",
     "maplibre-gl": "file:packages/maplibre-gl-js",
     "maplibre-gl-js": "file:packages/maplibre-gl-js",
     "multi-regl": "^1.1.1",
