--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "axios": "^0.17.1",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
+    "d3-array": "^3.1.1",
     "d3-format": "^1.4.4",
+    "d3-geo": "^3.0.1",
     "d3-jetpack": "^2.0.19",
     "d3-jetpack-module": "0.0.19",
     "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
