--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@macrostrat/revision-info-webpack": "^1.0.0",
     "@types/node": "^13.13.5",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
@@ -76,6 +77,7 @@
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.0.0",
+    "new-github-issue-url": "^1.0.0",
     "pbf": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.13.1",
