--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@mapbox/vector-tile": "^1.3.1",
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
+    "@mdx-js/loader": "^1.6.22",
     "@types/react-redux": "^7.1.7",
     "axios": "^0.17.1",
     "classnames": "^2.2.6",
