--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
       "~/*": ["./src/*"],
       "@macrostrat/cesium-viewer": ["packages/cesium-viewer/src/"],
       "@macrostrat/cesium-martini": ["packages/cesium-martini"],
-      "@macrostrat/ui-components": ["packages/ui-components/src/"],
+      "@macrostrat/ui-components": [
+        "ui-components/packages/ui-components/src/"
+      ],
       "@macrostrat/column-components": ["packages/column-components/src/"],
       "@macrostrat/map-components": ["packages/map-components/src/"]
     }
