--- a/packages/column-footprint-editor/package.json
+++ b/packages/column-footprint-editor/package.json
@@ -16,6 +16,7 @@
     "mapbox-gl": "^2.2.0",
     "mapbox-gl-draw-snap-mode": "^0.1.6",
     "react": "^16.13.1",
+    "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.3.0",
