WIP; beginning integration of the burwell-sources SPA

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "gl-matrix": "^3.3.0",
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "mapbox-gl": "^2.0.0",
+    "mapbox-gl": "^2.2.0",
+    "material-ui": "^0.18.6",
     "new-github-issue-url": "^1.0.0",
     "pbf": "^3.2.1",
     "prop-types": "^15.6.0",
