--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^5.3.2",
     "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^2.4.5",
+    "react-hot-loader": "^4.13.0",
     "style-loader": "^3.2.1",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.2.0",
