--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.2.0",
+    "mapbox-gl-controls": "^2.3.5",
     "new-github-issue-url": "^1.0.0",
     "pbf": "^3.2.1",
     "prop-types": "^15.6.0",
