--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "topojson-client": "^3.0.0",
-    "urijs": "^1.19.2"
+    "urijs": "^1.19.2",
+    "use-resize-observer": "^8.0.0"
   },
   "prettier": {}
 }
