Line symbols now work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@macrostrat/cesium-martini": ["packages/cesium-martini"],
       "@macrostrat/ui-components": ["deps/ui-components/packages/ui-components/src/"],
       "@macrostrat/column-components": ["deps/ui-components/packages/column-components/src/"],
-      "@macrostrat/map-components": ["deps/ui-components/packages/map-components/src/"]
+      "@macrostrat/map-components": ["deps/ui-components/packages/map-components/src/"],
+      "@macrostrat/map-styling": ["deps/ui-components/packages/map-styling/src/"],
     }
   },
   "include": ["src"]
