--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bundledDeps/ui-components"]
+[submodule "deps/ui-components"]
 	path = deps/ui-components
 	url = https://github.com/UW-Macrostrat/ui-components.git
