--- a/column-builder/package.json
+++ b/column-builder/package.json
@@ -5,16 +5,19 @@
     "dev": "next dev -p 1234",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "cypress": "cypress open"
+    "lint": "next lint"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.52.0",
     "@blueprintjs/popover2": "^0.12.9",
     "@blueprintjs/select": "^3.18.11",
+    "@macrostrat/form-components": "^0.0.5",
     "@macrostrat/hyper": "^2.0.1",
     "@macrostrat/ui-components": "^1.1.2",
+    "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@supabase/postgrest-js": "^0.36.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.2.3",
+    "mapbox-gl": "^2.8.2",
     "next": "12.0.8",
     "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
