--- a/column-builder/package.json
+++ b/column-builder/package.json
@@ -19,6 +19,7 @@
     "next": "12.0.8",
     "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
     "react-dom": "17.0.2",
     "sass": "^1.49.0"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.4"
