--- a/column-builder/.gitignore
+++ b/column-builder/.gitignore
@@ -29,7 +29,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env.production
+.env.development
 # vercel
 .vercel
 
