--- a/column-builder/package.json
+++ b/column-builder/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev -p 1234",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 1234",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@supabase/postgrest-js": "^0.36.0",
     "@types/mapbox__mapbox-gl-draw": "^1.2.3",
+    "axios": "^0.27.2",
     "mapbox-gl": "^2.8.2",
     "next": "12.0.8",
     "next-transpile-modules": "^9.0.0",
