--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.7.0",
+    "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat/column-components": "*",
     "@macrostrat/hyper": "^2.2.1",
@@ -69,6 +70,7 @@
     "d3-jetpack": "^2.0.19",
     "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
     "gl-matrix": "^3.3.0",
+    "history": "^5.3.0",
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.9.1",
