--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
-    "dotenv-webpack": "^7.0.3",
+    "dotenv": "^16.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "lerna": "^3.22.1",
