--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@macrostrat/map-interface",
   "private": true,
-  "version": "4.0.0-b10",
+  "version": "4.0.0",
   "description": "Macrostrat map interface",
   "main": "index.html",
   "scripts": {
