--- a/packages/column-footprint-editor/package.json
+++ b/packages/column-footprint-editor/package.json
@@ -10,6 +10,7 @@
     "@blueprintjs/select": "^4.4.1",
     "@macrostrat/ui-components": "^2.0.3",
     "@mapbox/mapbox-gl-draw": "^1.2.2",
+    "@parcel/transformer-svg-react": "^2.6.2",
     "@turf/nearest-point-on-line": "^5.1.5",
     "@types/mapbox__mapbox-gl-draw": "^1.2.4",
     "axios": "^0.21.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-stylus": "^2.0.0-beta.2",
-    "parcel": "next"
+    "parcel": "^2.6.2",
+    "process": "^0.11.10"
   }
 }
