needed to get it to build

--- a/packages/column-footprint-editor/Dockerfile
+++ b/packages/column-footprint-editor/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12
+FROM node:14
 
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
@@ -13,4 +13,4 @@ COPY . .
 RUN npm run build
 WORKDIR /app/dist
 
-ENTRYPOINT ["npx", "serve"]
+ENTRYPOINT ["npx", "serve", "-p", "1235"]
