--- a/packages/column-footprint-editor/package.json
+++ b/packages/column-footprint-editor/package.json
@@ -4,6 +4,15 @@
     "start": "ENV=development parcel serve -p 1235 ./src/index.html",
     "build": "ENV=production parcel build ./src/index.html"
   },
+  "babel": {
+    "presets": [
+      "@parcel/babel-preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@parcel/babel-plugin-transform-runtime"
+    ]
+  },
   "dependencies": {
     "@blueprintjs/core": "^4.5.1",
     "@blueprintjs/popover2": "^1.4.1",
@@ -24,6 +33,7 @@
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
+    "@parcel/babel-plugin-transform-runtime": "^2.6.2",
     "@parcel/transformer-stylus": "^2.0.0-beta.2",
     "parcel": "^2.6.2",
     "process": "^0.11.10"
