Updated symbols etc for compilation

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@visx/scale": "^2.2.2",
     "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.25.0",
+    "browserify-zlib": "^0.2.0",
     "cesium": "1.81.0",
     "classnames": "^2.2.6",
     "d3": "^4.13.0",
@@ -87,12 +88,14 @@
     "geologic-patterns": "git+https://github.com/davenquinn/geologic-patterns.git",
     "gl-matrix": "^3.3.0",
     "history": "^5.3.0",
+    "https-browserify": "^1.0.0",
     "immutability-helper": "^2.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^2.9.1",
     "mapbox-gl-controls": "^2.3.5",
     "maplibre-gl": "workspace:*",
     "new-github-issue-url": "^1.0.0",
+    "path-browserify": "^1.0.1",
     "pbf": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.13.1",
@@ -106,6 +109,9 @@
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "regl": "^1.5.0",
+    "resium": "1.13.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
     "urijs": "^1.19.2",
