--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
-yarnPath: .yarn/releases/yarn-3.2.2.cjs
-pnpMode: loose
+nodeLinker: node-modules
+
 pnpFallbackMode: all
+
+pnpMode: loose
+
+yarnPath: .yarn/releases/yarn-3.2.2.cjs
